# Explainer-Video-Factory

./: .env.example  .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
assets/themes/: default.json
docs/: agent_workflow.md  api_reference.md  architecture.md
examples/outputs/d8776c33-7dfb-4eda-802b-f2b4d26352e0/: subtitles.srt
scripts/: run_demo.py
src/explainer_factory/: __init__.py  config.py  exceptions.py  logging.py
src/explainer_factory/agents/: __init__.py  avatar_agent.py  synthesis_agent.py  visuals_agent.py
src/explainer_factory/api/: app.py  schemas.py
src/explainer_factory/api/routes/: health.py  render.py
src/explainer_factory/models/: __init__.py  render_job.py  scene.py  script.py
src/explainer_factory/orchestrator/: graph.py  nodes.py  state.py
src/explainer_factory/pipeline/: __init__.py  scene_planner.py  script_generator.py  timeline.py
src/explainer_factory/renderers/: __init__.py  subtitle_renderer.py  tts_renderer.py  video_composer.py  visual_renderer.py
src/explainer_factory/utils/: __init__.py  audio_utils.py  file_manager.py  image_utils.py
tests/: test_config.py  test_scene_planner.py  test_script_generator.py  test_timeline.py
tests/test_agents/: test_avatar_agent.py  test_visuals_agent.py
tests/test_api/: test_render_routes.py
tests/test_renderers/: test_tts_renderer.py
